# ml-fall-2024-final

./: .gitignore  README.md  pyproject.toml  ruff.toml
ml_fall_2024_final/: constants.py  dataset.py  type.py  utils.py
ml_fall_2024_final/improved/: CNN-LSTM-240.ipynb  CNN-LSTM-96.ipynb  main.py  model.py  preprocess.py  trainer.py
ml_fall_2024_final/lstm/: LSTM.ipynb  main.py  model.py  preprocess.py  trainer.py
ml_fall_2024_final/transformer/: main.py  model.py  plotting.py  trainer.py  transformer.ipynb
